--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.14.0",
     "jsx-loader": "^0.13.2",
     "react": "^15.3.2",
+    "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
     "react-router": "^3.0.0",
     "react-timer-mixin": "^0.13.3",
