--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
+    "react-infinite": "^0.10.0",
     "react-router": "^3.0.0",
     "react-timer-mixin": "^0.13.3",
+    "react-waypoint": "^4.1.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.16.1"
   },
