--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.14.0",
     "body-parser": "^1.15.2",
+    "bootstrap": "^4.0.0-alpha.6",
     "express": "^4.14.0",
     "jsx-loader": "^0.13.2",
     "react": "^15.3.2",
